# EconomicEngine

./: .gitignore  CMakeLists.txt  Data.csv  EconomicEngine.cpp  README.md
Files/CSV/: DataOut.csv  money.csv  production.csv  profit.csv
Files/json/: EventsBackup.json  datas.json  datas_example.json  parameters.json  parameters_example.json
include/: Agent.h  Engine.h  EngineFactory.h  Entity.h  Farmer.h  WoodCutter.h
include/Core/: GameObject.h  GameplayStatics.h  Signal.h  StructUtils.h  Type.h  Types.h
include/Engine/: Engine.h  EngineFactory.h  Parser.h
include/Engine/Parser/: CSV.h  Json.h  Parser.h
include/Simulation/: Event.h  ObjectManager.h  Simulation.h  TradeManager.h
include/Simulation/Agent/: Agent.h  AgentManager.h
include/Simulation/Global/: GameMode.h  God.h
include/Simulation/Items/: Food.h  Item.h  Wood.h
include/Simulation/Items/Tools/: Axe.h  Hoe.h  Tool.h
include/Simulation/Jobs/Base/: Job.h
include/Simulation/Jobs/Implementations/: Farmer.h  WoodCutter.h
json/: datas.json  parameters.json
source/Core/: Entity.cpp  GamePlayStatics.cpp  Signal.cpp
source/Engine/: Engine.cpp  Parser.cpp
source/Engine/Parser/: CSV.cpp  Json.cpp
source/Simulation/: Event.cpp  Simulation.cpp  TradeManager.cpp
source/Simulation/Agent/: Agent.cpp  AgentManager.cpp
source/Simulation/Global/: GameMode.cpp
source/Simulation/Items/: Food.cpp  Wood.cpp
source/Simulation/Items/Tools/: Axe.cpp  Hoe.cpp  Tool.cpp
source/Simulation/Jobs/Base/: Job.cpp
source/Simulation/Jobs/Implementations/: Farmer.cpp  WoodCutter.cpp
src/: Agent.cpp  Engine.cpp  Entity.cpp  Farmer.cpp  Parser.cpp  Simulation.cpp
